some style adjustments

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="keywords" content="car, game, probability" />
     <meta name="description" content="probability car game" />
     <meta name="author" content="Mehmet Yilmaz" />
+    <link rel="icon" href="./icon.png" />
     <title>Probability Game</title>
     <link rel="stylesheet" href="color.css" />
   </head>
@@ -17,7 +18,7 @@
     </div>
 
     <div id="reset-btn-div">
-      <button id="reset-btn" onclick="resetFunction()">Arabayı Sakla</button>
+      <button id="reset-btn" onclick="resetFunction()">Tekrar Oyna</button>
     </div>
     <div id="choice-btn">
       <h3 id="warning">Bol Şanslar!</h3>
@@ -52,9 +53,15 @@
       </div>
     </div>
     <div id="reset-stats-btn-div">
-      <button id="reset-btn" onclick="resetFunction2()">
+      <button id="reset1-btn" onclick="resetFunction2()">
         İstatistikleri Sıfırla
       </button>
+      <p>
+        <b>NOTE:</b> Rather than a game it is a probability demonstration. This
+        why I console loged answers. <br />
+        You can track the answer on your console to see the consistency of
+        probability.
+      </p>
     </div>
     <script src="color.js"></script>
   </body>
